[gd_scene load_steps=9 format=3 uid="uid://b57tm5xnp0h5c"]

[ext_resource type="Script" path="res://scripts/user_interface/uiCombatBarsMini.gd" id="1_0kb5o"]
[ext_resource type="PackedScene" uid="uid://yuje0oodg6y2" path="res://scenes/user_interface/Indicator.tscn" id="4_mv70c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_diu1g"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6utw"]
bg_color = Color(0.780392, 0, 0.0117647, 1)

[sub_resource type="Animation" id="Animation_eit6l"]
resource_name = "FadeIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.780392, 0, 0.0117647, 0), Color(0.780392, 0, 0.0117647, 1)]
}

[sub_resource type="Animation" id="Animation_sq7lx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.780392, 0, 0.0117647, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ea25p"]
_data = {
"FadeIn": SubResource("Animation_eit6l"),
"RESET": SubResource("Animation_sq7lx")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kau5d"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[node name="CombatBars" type="Node2D"]
z_index = 20
script = ExtResource("1_0kb5o")

[node name="HealthBarFader" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = 35.0
offset_right = 10.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_diu1g")
theme_override_styles/fill = SubResource("StyleBoxFlat_c6utw")
value = 75.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="HealthBarFader"]
libraries = {
"": SubResource("AnimationLibrary_ea25p")
}

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -9.0
offset_top = 36.0
offset_right = 9.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_kau5d")
value = 50.0
show_percentage = false

[node name="PermaStatusEffectContainer" type="HFlowContainer" parent="HealthBar"]
layout_mode = 2
offset_left = -6.0
offset_top = 3.0
offset_right = 24.0
offset_bottom = 35.0
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
alignment = 1

[node name="Indicator" parent="." instance=ExtResource("4_mv70c")]
position = Vector2(0, 3.8147e-06)

[node name="Marker2D" type="Marker2D" parent="."]
